[gd_scene load_steps=7 format=3 uid="uid://g88084h8hqb5"]

[ext_resource type="FontFile" uid="uid://bspmm0n21y6lk" path="res://assets/visual/ui/fonts/Adventurer.ttf" id="1_5jw5n"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_jh7fb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s84f3"]
bg_color = Color(0, 0, 0, 0.921569)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.521569, 0.290196, 0.384314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u64tl"]
bg_color = Color(0.521569, 0.290196, 0.384314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.152941, 0.215686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcri7"]
bg_color = Color(0.521569, 0.290196, 0.384314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.815686, 0.811765, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wavt"]
bg_color = Color(0.239216, 0.117647, 0.168627, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.815686, 0.811765, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(1, 1)

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jh7fb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s84f3")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="PauseTxt" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.866667, 0.811765, 0, 1)
theme_override_fonts/font = ExtResource("1_5jw5n")
theme_override_font_sizes/font_size = 44
text = "Pause"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ReturnButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5jw5n")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_u64tl")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcri7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wavt")
text = "Return to game
"

[node name="RestartButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5jw5n")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_u64tl")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcri7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wavt")
text = "Restart level
"

[node name="CodexButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5jw5n")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_u64tl")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcri7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wavt")
text = "Codex"

[node name="OptionsButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5jw5n")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_u64tl")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcri7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wavt")
text = "Options
"

[node name="BackToMenuButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5jw5n")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_u64tl")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcri7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wavt")
text = "Abandon"

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/CodexButton" to="." method="_on_codex_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
